CompilePrinciple_Ex1/src/grammar/MIDLParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.13.1
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from ./src/MIDL.g4 by ANTLR 4.13.1

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.13.1")]
[System.CLSCompliant(false)]
public partial class MIDLParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, WS=38, FLOATING_PT=39, 
		INTEGER=40, BOOLEAN=41, CHAR=42, STRING=43, ID=44;
	public const int
		RULE_specification = 0, RULE_definition = 1, RULE_module = 2, RULE_type_decl = 3, 
		RULE_struct_type = 4, RULE_member_list = 5, RULE_type_spec = 6, RULE_scoped_name = 7, 
		RULE_base_type_spec = 8, RULE_floating_pt_type = 9, RULE_integer_type = 10, 
		RULE_signed_int = 11, RULE_unsigned_int = 12, RULE_declarators = 13, RULE_declarator = 14, 
		RULE_simple_declarator = 15, RULE_array_declarator = 16, RULE_exp_list = 17, 
		RULE_or_expr = 18, RULE_xor_expr = 19, RULE_and_expr = 20, RULE_shift_expr = 21, 
		RULE_add_expr = 22, RULE_mult_expr = 23, RULE_unary_expr = 24, RULE_literal = 25;
	public static readonly string[] ruleNames = {
		"specification", "definition", "module", "type_decl", "struct_type", "member_list", 
		"type_spec", "scoped_name", "base_type_spec", "floating_pt_type", "integer_type", 
		"signed_int", "unsigned_int", "declarators", "declarator", "simple_declarator", 
		"array_declarator", "exp_list", "or_expr", "xor_expr", "and_expr", "shift_expr", 
		"add_expr", "mult_expr", "unary_expr", "literal"
	};

	private static readonly string[] _LiteralNames = {
		null, "';'", "'module'", "'{'", "'}'", "'struct'", "'::'", "'char'", "'string'", 
		"'boolean'", "'float'", "'double'", "'long'", "'short'", "'int16'", "'int32'", 
		"'int64'", "'int8'", "'unsigned'", "'uint16'", "'uint32'", "'uint64'", 
		"'uint8'", "','", "'='", "'['", "']'", "'|'", "'^'", "'&'", "'>>'", "'<<'", 
		"'+'", "'-'", "'*'", "'/'", "'%'", "'~'"
	};
	private static readonly string[] _SymbolicNames = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, "WS", "FLOATING_PT", "INTEGER", "BOOLEAN", "CHAR", "STRING", 
		"ID"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "MIDL.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override int[] SerializedAtn { get { return _serializedATN; } }

	static MIDLParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public MIDLParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public MIDLParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class SpecificationContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public DefinitionContext[] definition() {
			return GetRuleContexts<DefinitionContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public DefinitionContext definition(int i) {
			return GetRuleContext<DefinitionContext>(i);
		}
		public SpecificationContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_specification; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IMIDLListener typedListener = listener as IMIDLListener;
			if (typedListener != null) typedListener.EnterSpecification(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IMIDLListener typedListener = listener as IMIDLListener;
			if (typedListener != null) typedListener.ExitSpecification(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMIDLVisitor<TResult> typedVisitor = visitor as IMIDLVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitSpecification(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public SpecificationContext specification() {
		SpecificationContext _localctx = new SpecificationContext(Context, State);
		EnterRule(_localctx, 0, RULE_specification);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 53;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			do {
				{
				{
				State = 52;
				definition();
				}
				}
				State = 55;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			} while ( _la==T__1 || _la==T__4 );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class DefinitionContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public Type_declContext type_decl() {
			return GetRuleContext<Type_declContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ModuleContext module() {
			return GetRuleContext<ModuleContext>(0);
		}
		public DefinitionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_definition; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IMIDLListener typedListener = listener as IMIDLListener;
			if (typedListener != null) typedListener.EnterDefinition(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IMIDLListener typedListener = listener as IMIDLListener;
			if (typedListener != null) typedListener.ExitDefinition(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMIDLVisitor<TResult> typedVisitor = visitor as IMIDLVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitDefinition(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public DefinitionContext definition() {
		DefinitionContext _localctx = new DefinitionContext(Context, State);
		EnterRule(_localctx, 2, RULE_definition);
		try {
			State = 63;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case T__4:
				EnterOuterAlt(_localctx, 1);
				{
				State = 57;
				type_decl();
				State = 58;
				Match(T__0);
				}
				break;
			case T__1:
				EnterOuterAlt(_localctx, 2);
				{
				State = 60;
				module();
				State = 61;
				Match(T__0);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ModuleContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ID() { return GetToken(MIDLParser.ID, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public DefinitionContext[] definition() {
			return GetRuleContexts<DefinitionContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public DefinitionContext definition(int i) {
			return GetRuleContext<DefinitionContext>(i);
		}
		public ModuleContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_module; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IMIDLListener typedListener = listener as IMIDLListener;
			if (typedListener != null) typedListener.EnterModule(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IMIDLListener typedListener = listener as IMIDLListener;
			if (typedListener != null) typedListener.ExitModule(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMIDLVisitor<TResult> typedVisitor = visitor as IMIDLVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitModule(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ModuleContext module() {
		ModuleContext _localctx = new ModuleContext(Context, State);
		EnterRule(_localctx, 4, RULE_module);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 65;
			Match(T__1);
			State = 66;
			Match(ID);
			State = 67;
			Match(T__2);
			State = 69;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			do {
				{
				{
				State = 68;
				definition();
				}
				}
				State = 71;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			} while ( _la==T__1 || _la==T__4 );
			State = 73;
			Match(T__3);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Type_declContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public Struct_typeContext struct_type() {
			return GetRuleContext<Struct_typeContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ID() { return GetToken(MIDLParser.ID, 0); }
		public Type_declContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_type_decl; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IMIDLListener typedListener = listener as IMIDLListener;
			if (typedListener != null) typedListener.EnterType_decl(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IMIDLListener typedListener = listener as IMIDLListener;
			if (typedListener != null) typedListener.ExitType_decl(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMIDLVisitor<TResult> typedVisitor = visitor as IMIDLVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitType_decl(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Type_declContext type_decl() {
		Type_declContext _localctx = new Type_declContext(Context, State);
		EnterRule(_localctx, 6, RULE_type_decl);
		try {
			State = 78;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,3,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 75;
				struct_type();
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 76;
				Match(T__4);
				State = 77;
				Match(ID);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Struct_typeContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ID() { return GetToken(MIDLParser.ID, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public Member_listContext member_list() {
			return GetRuleContext<Member_listContext>(0);
		}
		public Struct_typeContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_struct_type; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IMIDLListener typedListener = listener as IMIDLListener;
			if (typedListener != null) typedListener.EnterStruct_type(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IMIDLListener typedListener = listener as IMIDLListener;
			if (typedListener != null) typedListener.ExitStruct_type(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMIDLVisitor<TResult> typedVisitor = visitor as IMIDLVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitStruct_type(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Struct_typeContext struct_type() {
		Struct_typeContext _localctx = new Struct_typeContext(Context, State);
		EnterRule(_localctx, 8, RULE_struct_type);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 80;
			Match(T__4);
			State = 81;
			Match(ID);
			State = 82;
			Match(T__2);
			State = 83;
			member_list();
			State = 84;
			Match(T__3);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Member_listContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public Type_specContext[] type_spec() {
			return GetRuleContexts<Type_specContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public Type_specContext type_spec(int i) {
			return GetRuleContext<Type_specContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public DeclaratorsContext[] declarators() {
			return GetRuleContexts<DeclaratorsContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public DeclaratorsContext declarators(int i) {
			return GetRuleContext<DeclaratorsContext>(i);
		}
		public Member_listContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_member_list; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IMIDLListener typedListener = listener as IMIDLListener;
			if (typedListener != null) typedListener.EnterMember_list(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IMIDLListener typedListener = listener as IMIDLListener;
			if (typedListener != null) typedListener.ExitMember_list(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMIDLVisitor<TResult> typedVisitor = visitor as IMIDLVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitMember_list(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Member_listContext member_list() {
		Member_listContext _localctx = new Member_listContext(Context, State);
		EnterRule(_localctx, 10, RULE_member_list);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 92;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 17592194432992L) != 0)) {
				{
				{
				State = 86;
				type_spec();
				State = 87;
				declarators();
				State = 88;
				Match(T__0);
				}
				}
				State = 94;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Type_specContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public Scoped_nameContext scoped_name() {
			return GetRuleContext<Scoped_nameContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Base_type_specContext base_type_spec() {
			return GetRuleContext<Base_type_specContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Struct_typeContext struct_type() {
			return GetRuleContext<Struct_typeContext>(0);
		}
		public Type_specContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_type_spec; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IMIDLListener typedListener = listener as IMIDLListener;
			if (typedListener != null) typedListener.EnterType_spec(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IMIDLListener typedListener = listener as IMIDLListener;
			if (typedListener != null) typedListener.ExitType_spec(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMIDLVisitor<TResult> typedVisitor = visitor as IMIDLVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitType_spec(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Type_specContext type_spec() {
		Type_specContext _localctx = new Type_specContext(Context, State);
		EnterRule(_localctx, 12, RULE_type_spec);
		try {
			State = 98;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case T__5:
			case ID:
				EnterOuterAlt(_localctx, 1);
				{
				State = 95;
				scoped_name();
				}
				break;
			case T__6:
			case T__7:
			case T__8:
			case T__9:
			case T__10:
			case T__11:
			case T__12:
			case T__13:
			case T__14:
			case T__15:
			case T__16:
			case T__17:
			case T__18:
			case T__19:
			case T__20:
			case T__21:
				EnterOuterAlt(_localctx, 2);
				{
				State = 96;
				base_type_spec();
				}
				break;
			case T__4:
				EnterOuterAlt(_localctx, 3);
				{
				State = 97;
				struct_type();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Scoped_nameContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] ID() { return GetTokens(MIDLParser.ID); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ID(int i) {
			return GetToken(MIDLParser.ID, i);
		}
		public Scoped_nameContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_scoped_name; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IMIDLListener typedListener = listener as IMIDLListener;
			if (typedListener != null) typedListener.EnterScoped_name(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IMIDLListener typedListener = listener as IMIDLListener;
			if (typedListener != null) typedListener.ExitScoped_name(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMIDLVisitor<TResult> typedVisitor = visitor as IMIDLVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitScoped_name(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Scoped_nameContext scoped_name() {
		Scoped_nameContext _localctx = new Scoped_nameContext(Context, State);
		EnterRule(_localctx, 14, RULE_scoped_name);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 101;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==T__5) {
				{
				State = 100;
				Match(T__5);
				}
			}

			State = 103;
			Match(ID);
			State = 108;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==T__5) {
				{
				{
				State = 104;
				Match(T__5);
				State = 105;
				Match(ID);
				}
				}
				State = 110;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Base_type_specContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public Floating_pt_typeContext floating_pt_type() {
			return GetRuleContext<Floating_pt_typeContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Integer_typeContext integer_type() {
			return GetRuleContext<Integer_typeContext>(0);
		}
		public Base_type_specContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_base_type_spec; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IMIDLListener typedListener = listener as IMIDLListener;
			if (typedListener != null) typedListener.EnterBase_type_spec(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IMIDLListener typedListener = listener as IMIDLListener;
			if (typedListener != null) typedListener.ExitBase_type_spec(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMIDLVisitor<TResult> typedVisitor = visitor as IMIDLVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitBase_type_spec(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Base_type_specContext base_type_spec() {
		Base_type_specContext _localctx = new Base_type_specContext(Context, State);
		EnterRule(_localctx, 16, RULE_base_type_spec);
		try {
			State = 116;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,8,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 111;
				floating_pt_type();
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 112;
				integer_type();
				}
				break;
			case 3:
				EnterOuterAlt(_localctx, 3);
				{
				State = 113;
				Match(T__6);
				}
				break;
			case 4:
				EnterOuterAlt(_localctx, 4);
				{
				State = 114;
				Match(T__7);
				}
				break;
			case 5:
				EnterOuterAlt(_localctx, 5);
				{
				State = 115;
				Match(T__8);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Floating_pt_typeContext : ParserRuleContext {
		public Floating_pt_typeContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_floating_pt_type; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IMIDLListener typedListener = listener as IMIDLListener;
			if (typedListener != null) typedListener.EnterFloating_pt_type(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IMIDLListener typedListener = listener as IMIDLListener;
			if (typedListener != null) typedListener.ExitFloating_pt_type(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMIDLVisitor<TResult> typedVisitor = visitor as IMIDLVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitFloating_pt_type(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Floating_pt_typeContext floating_pt_type() {
		Floating_pt_typeContext _localctx = new Floating_pt_typeContext(Context, State);
		EnterRule(_localctx, 18, RULE_floating_pt_type);
		try {
			State = 122;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case T__9:
				EnterOuterAlt(_localctx, 1);
				{
				State = 118;
				Match(T__9);
				}
				break;
			case T__10:
				EnterOuterAlt(_localctx, 2);
				{
				State = 119;
				Match(T__10);
				}
				break;
			case T__11:
				EnterOuterAlt(_localctx, 3);
				{
				State = 120;
				Match(T__11);
				State = 121;
				Match(T__10);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Integer_typeContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public Signed_intContext signed_int() {
			return GetRuleContext<Signed_intContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Unsigned_intContext unsigned_int() {
			return GetRuleContext<Unsigned_intContext>(0);
		}
		public Integer_typeContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_integer_type; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IMIDLListener typedListener = listener as IMIDLListener;
			if (typedListener != null) typedListener.EnterInteger_type(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IMIDLListener typedListener = listener as IMIDLListener;
			if (typedListener != null) typedListener.ExitInteger_type(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMIDLVisitor<TResult> typedVisitor = visitor as IMIDLVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitInteger_type(this);
			else return visitor.VisitChildren(this);
		}
	}
